# 03-rsvd-team-3

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
applications/: CMakeLists.txt
applications/PCA/: CMakeLists.txt  PCA.cpp  PCA.h  PCAtest.cpp
applications/digits/: CMakeLists.txt  digits_recognition.cpp  digits_recognition.hpp
applications/imagecompression/: CMakeLists.txt  ImageCompression.cpp  README.md
benchmarks/: CMakeLists.txt  bench_bdcsvd.cpp  bench_givensrotation.cpp  bench_householder.cpp  bench_matmul.cpp  bench_myRSVD.cpp  bench_myRSVD_mpi.cpp  bench_powermethod.cpp  bench_randomizedSVD.cpp  bench_rsvd.cpp  bench_rsvd_mpi.cpp
benchmarks/dense/: CMakeLists.txt  dense_svd.cpp
benchmarks/sparse/: CMakeLists.txt  givens_qr.cpp  sparse_qr.cpp  sparse_svd.cpp
profiling/: CMakeLists.txt  givensrotation_qr.cpp  mpi_givensrotation_qr.cpp  mpi_omp_random_matrix.cpp  mpi_random_matrix.cpp  mpi_rsvd.cpp  omp_random_matrix.cpp  pmsvd.cpp  pmsvd_sparse.cpp  rsvd.cpp
profiling/dense/: CMakeLists.txt  cur.cpp  pmsvd.cpp  rsvd.cpp
profiling/sparse/: CMakeLists.txt  pmsvd.cpp  qr.cpp  rsvd.cpp
python/: analysis.ipynb  matmul.ipynb  qr.ipynb  rsvd.ipynb
python/results/: bdcsvd.xml  givens_rotation.xml  householder.xml  numpy.xml  powermethod.xml  rsvd.xml  rsvd1.xml  rsvd2.xml  sparseqr.xml  svd_results.csv  svd_results_sparse.csv
report/: Thesis.tex  bibliography.bib
report/Configuration_files/: title_page.tex
src/: GivensRotationQR.h  GivensRotationQR_MPI.h  MPIGivensRotationQR.h  MatrixTraits.h  PowerMethodSVD.h  QRfactorization.cpp  RCUR_4_debug.h  README.md  RandomizedSVD.h  RandomizedSVD_MPI.h  RandomizedSVD_MPI_and_OMP.h  RandomizedSVD_OMP.h  main.cpp
tests/: CMakeLists.txt  test_PCA.cpp  test_digits_recognition.cpp  test_givens_rotation_qr.cpp  test_main.cpp  test_pca.cpp  test_rcur.cpp  test_rid.cpp  test_rsvd.cpp  test_rsvd_mpi.cpp
