add_executable(rsvd_profiling rsvd.cpp)
target_link_libraries(rsvd_profiling PRIVATE Eigen3::Eigen)
target_link_libraries(rsvd_profiling PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(rsvd_profiling PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(rsvd_profiling PRIVATE -O3 -march=native)

add_executable(rsvd_sparse_profiling rsvd_sparse.cpp)
target_link_libraries(rsvd_sparse_profiling PRIVATE Eigen3::Eigen)
target_link_libraries(rsvd_sparse_profiling PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(rsvd_sparse_profiling PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(rsvd_sparse_profiling PRIVATE -O3 -march=native)

add_executable(pmsvd_profiling pmsvd_sparse.cpp)
target_link_libraries(pmsvd_profiling PRIVATE Eigen3::Eigen)
target_link_libraries(pmsvd_profiling PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(pmsvd_profiling PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(pmsvd_profiling PRIVATE -O3 -march=native)

add_executable(givensrotation_qr_profiling givensrotation_qr.cpp)
target_link_libraries(givensrotation_qr_profiling PRIVATE Eigen3::Eigen)
target_link_libraries(givensrotation_qr_profiling PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(givensrotation_qr_profiling PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(givensrotation_qr_profiling PRIVATE -O3 -march=native)

add_executable(mpi_random_matrix mpi_random_matrix.cpp)
target_link_libraries(mpi_random_matrix PRIVATE Eigen3::Eigen MPI::MPI_CXX)
target_link_libraries(mpi_random_matrix PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(mpi_random_matrix PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(mpi_random_matrix PRIVATE -O3 -march=native)

add_executable(omp_random_matrix omp_random_matrix.cpp)
target_link_libraries(omp_random_matrix PRIVATE Eigen3::Eigen MPI::MPI_CXX)
target_link_libraries(omp_random_matrix PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(omp_random_matrix PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(omp_random_matrix PRIVATE -O3 -march=native)


add_executable(mpi_omp_random_matrix mpi_omp_random_matrix.cpp)
target_link_libraries(mpi_omp_random_matrix PRIVATE Eigen3::Eigen MPI::MPI_CXX)
target_link_libraries(mpi_omp_random_matrix PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(mpi_omp_random_matrix PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(mpi_omp_random_matrix PRIVATE -O3 -march=native)

add_executable(mpi_rsvd mpi_rsvd.cpp)
target_link_libraries(mpi_rsvd PRIVATE Eigen3::Eigen MPI::MPI_CXX)
target_link_libraries(mpi_rsvd PRIVATE OpenMP::OpenMP_CXX)
target_link_libraries(mpi_rsvd PRIVATE OpenBLAS::OpenBLAS)
target_compile_options(mpi_rsvd PRIVATE -O3 -march=native)
